# Benchmark-CogFlex-Suite

./: .env.example  .gitignore  AGENTS.md  KAGGLE_BENCHMARK_CONTRACT.md  Makefile  README.md  benchmark_design_section_cognitive_flexibility.md  benchmark_result.json  iron_find_electric_implementation_spec.md  iron_find_electric_improved_plan.md  pyproject.toml  requirements-dev.txt  ruleshift_benchmark_v1_binary.task.json  v1_readiness_checklist.md
docs/: evaluation-cycle.mmd  kaggle-baseline-freeze.md  kaggle-full-run-checklist.md  kaggle-release-preflight.md  private-dataset-attachment.md  public-leaderboard-freeze.md
kaggle/: ruleshift_notebook_task.ipynb
reports/: ARTIFACT_POLICY.md  README.md  gemini_first_panel_report.md
scripts/: __init__.py  _private_builder.py  build_cogflex_dataset.py  build_deploy.py  build_kaggle.py  build_private_cogflex_dataset.py  build_private_dataset_artifact.py  build_ruleshift_dataset.py  build_runtime_dataset_package.py  check_public_private_isolation.py  deploy.py  deploy_dataset.sh  deploy_notebook.sh  deploy_private_dataset.sh  deploy_test_dataset.sh  generate_private_split_artifact.py  pre_deploy_check.sh  preflight_kaggle.py  private_cogflex_bundle.py  verify_cogflex.py  verify_ruleshift.py
src/: README.md  audit.py  baselines.py  generator.py  metrics.py  parser.py  protocol.py  render.py  rules.py  schema.py  splits.py  validate.py
tests/: cogflex_fixtures.py  conftest.py  kbench_shim.py  test_anthropic_panel.py  test_anthropic_provider.py  test_audit.py  test_baselines.py  test_build_kaggle.py  test_cd_build.py  (+45 more)
(+133 files in other folders)
