[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ruleshift-benchmark"
version = "0.0.0"
description = "Challenge runtime for RuleShift Benchmark."
requires-python = ">=3.11"
dependencies = [
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["tasks*"]
namespaces = true
